@@ -12,6 +12,9 @@ What's New in Python 2.6 release candidate 1?
 Core and Builtins
 -----------------
 
+- Issue #3751: str.rpartition would perform a left-partition when called with
+  a unicode argument.
+
 - Issue #3683: Fix compilation when --without-threads is given.
 
 - Issue #3668: Fix a memory leak with the "s*" argument parser in
